[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/gui.gd" type="Script" id=1]
[ext_resource path="res://themes/DarkTheme/Dark.theme" type="Theme" id=2]
[ext_resource path="res://scripts/gui_picker.gd" type="Script" id=3]
[ext_resource path="res://scenes/gui/gui_turret.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/gui_turret.gd" type="Script" id=5]
[ext_resource path="res://scripts/gui_bottom_bar.gd" type="Script" id=6]
[ext_resource path="res://scripts/gui_top_bar.gd" type="Script" id=7]

[sub_resource type="OpenSimplexNoise" id=1]
seed = -7

[sub_resource type="NoiseTexture" id=2]
width = 100
height = 100
seamless = true
noise = SubResource( 1 )

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_dot" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_bar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="top_bar"]
anchor_right = 1.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resources" type="Control" parent="top_bar/panel"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="top_bar/panel/resources"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cash_label" type="Label" parent="top_bar/panel/resources/HBoxContainer"]
margin_top = 7.0
margin_right = 76.4
margin_bottom = 31.4
text = "Resources:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Label" parent="top_bar/panel/resources/HBoxContainer"]
margin_left = 79.0
margin_top = 7.0
margin_right = 113.4
margin_bottom = 31.4
text = "500T"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="k" type="Label" parent="top_bar/panel/resources/HBoxContainer"]
margin_left = 116.0
margin_top = 7.0
margin_right = 136.4
margin_bottom = 31.4
custom_colors/font_color = Color( 0.588235, 0, 1, 1 )
text = "0k"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a" type="Label" parent="top_bar/panel/resources/HBoxContainer"]
margin_left = 139.0
margin_top = 7.0
margin_right = 159.4
margin_bottom = 31.4
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0a"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Label" parent="top_bar/panel/resources/HBoxContainer"]
margin_left = 162.0
margin_top = 7.0
margin_right = 182.4
margin_bottom = 31.4
custom_colors/font_color = Color( 0, 0.203922, 1, 1 )
text = "0d"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s" type="Label" parent="top_bar/panel/resources/HBoxContainer"]
margin_left = 185.0
margin_top = 7.0
margin_right = 205.4
margin_bottom = 31.4
custom_colors/font_color = Color( 1, 0.619608, 0, 1 )
text = "0s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="editor_button" type="Button" parent="top_bar/panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
grow_horizontal = 0
text = "Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wave_label" type="Label" parent="top_bar/panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
grow_horizontal = 0
text = "Wave 3/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wave_button" type="Button" parent="top_bar/panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = -5.0
text = "Next Wave"

[node name="bottom_bar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voxels" type="Panel" parent="bottom_bar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -270.0
margin_bottom = -220.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="bottom_bar/voxels"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbox" type="HBoxContainer" parent="bottom_bar/voxels/ScrollContainer"]
margin_right = 101.0
margin_bottom = 50.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="TextureButton" parent="bottom_bar/voxels/ScrollContainer/Hbox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="bottom_bar/voxels/ScrollContainer/Hbox/0"]
margin_right = 50.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="bottom_bar/voxels/ScrollContainer/Hbox"]
margin_left = 51.0
margin_right = 101.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="bottom_bar/voxels/ScrollContainer/Hbox/1"]
margin_right = 50.0
margin_bottom = 50.0
color = Color( 0.619608, 0, 0.639216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map_tools" type="Panel" parent="bottom_bar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -220.0
margin_bottom = -120.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="bottom_bar/map_tools"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbox" type="HBoxContainer" parent="bottom_bar/map_tools/ScrollContainer"]
margin_right = 403.0
margin_bottom = 100.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attach" type="TextureButton" parent="bottom_bar/map_tools/ScrollContainer/Hbox"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="bottom_bar/map_tools/ScrollContainer/Hbox/attach"]
margin_right = 100.0
margin_bottom = 100.0
texture = SubResource( 2 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bottom_bar/map_tools/ScrollContainer/Hbox/attach"]
margin_left = 29.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "attach"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start path" type="TextureButton" parent="bottom_bar/map_tools/ScrollContainer/Hbox"]
margin_left = 101.0
margin_right = 201.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="bottom_bar/map_tools/ScrollContainer/Hbox/start path"]
margin_right = 100.0
margin_bottom = 100.0
texture = SubResource( 2 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bottom_bar/map_tools/ScrollContainer/Hbox/start path"]
margin_left = 29.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "start path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="path" type="TextureButton" parent="bottom_bar/map_tools/ScrollContainer/Hbox"]
margin_left = 202.0
margin_right = 302.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="bottom_bar/map_tools/ScrollContainer/Hbox/path"]
margin_right = 100.0
margin_bottom = 100.0
texture = SubResource( 2 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bottom_bar/map_tools/ScrollContainer/Hbox/path"]
margin_left = 29.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end path" type="TextureButton" parent="bottom_bar/map_tools/ScrollContainer/Hbox"]
margin_left = 303.0
margin_right = 403.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 50, 50 )
size_flags_horizontal = 9
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="bottom_bar/map_tools/ScrollContainer/Hbox/end path"]
margin_right = 100.0
margin_bottom = 100.0
texture = SubResource( 2 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bottom_bar/map_tools/ScrollContainer/Hbox/end path"]
margin_left = 29.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "end path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turrets" type="Panel" parent="bottom_bar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="bottom_bar/turrets"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbox" type="HBoxContainer" parent="bottom_bar/turrets/ScrollContainer"]
margin_right = 201.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui_turret" parent="bottom_bar/turrets/ScrollContainer/Hbox" instance=ExtResource( 4 )]

[node name="gui_turret2" parent="bottom_bar/turrets/ScrollContainer/Hbox" instance=ExtResource( 4 )]
margin_left = 101.0
margin_right = 201.0

[connection signal="button_down" from="top_bar/panel/editor_button" to="top_bar" method="_on_editor_button_down"]
[connection signal="pressed" from="top_bar/panel/wave_button" to="top_bar" method="_on_wave_button_pressed"]
